--- a/Client/src/components/profile/styles.scss
+++ b/Client/src/components/profile/styles.scss
@@ -1,6 +1,20 @@
 $primaryColor: #bb98ff;
 $secondaryColor: #3d3d3d;
 
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 24px;
+  z-index: 1000;
+}
 .membership {
   display: flex;
   align-items: center;
